# pyrunner-mcp

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
src/apps/browser/: config.py  main.py
src/apps/browser/apis/: __init__.py  browser.py  funcs.py
src/apps/features/: config.py  main.py
src/apps/features/apis/: __init__.py  db.py  funcs.py
src/core/: config.py
src/lib/: __init__.py
src/lib/mcp_server/: __init__.py
src/lib/mcp_server/app/: __init__.py  builder.py  callables.py  context.py  entities.py  registries.py  results.py
src/lib/mcp_server/protocol/: __init__.py  constants.py  errors.py  models.py  server.py
src/lib/mcp_server/transports/: __init__.py  options.py  stdio.py  streamable_http.py
src/lib/python_executor/: __init__.py  constants.py  errors.py  evaluator.py  executor.py  handlers_expressions.py  handlers_statements.py  models.py  runtime.py  security.py  utils.py
src/lib/python_service/: __init__.py  models.py  service.py
src/lib/sandbox_api/: __init__.py  registry.py
src/lib/sandbox_runner/: __init__.py  manager.py  protocol.py  worker.py
src/tests/functions/: test_registry.py  test_sandbox_functions.py
src/tests/mcp_server/: test_config.py  test_main_http.py  test_main_stdio.py  test_mcp_app.py
src/tests/python_executor/: test_async.py  test_core.py  test_limits.py  test_security.py
src/tests/python_service/: test_service.py
src/tests/sandbox_runner/: test_manager.py
